--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e1cce570",
+   "id": "4eccde71",
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "fbd50075",
+   "id": "b40af761",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "17e1b3cf",
+   "id": "7c7ba811",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3e1d5ae0",
+   "id": "1ac3c488",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7b35d028",
+   "id": "fe5d19c7",
    "metadata": {
     "scrolled": true
    },
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "05c4afa3",
+   "id": "6c2c96e6",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "1e429db1",
+   "id": "4dc80e7b",
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "cbdd55b7",
+   "id": "4ba8c552",
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "5ae9af04",
+   "id": "121ccae2",
    "metadata": {},
    "outputs": [
     {
@@ -207,17 +207,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c5ec951",
+   "execution_count": 46,
+   "id": "29781e5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Yes both are what you want\n"
+     ]
+    }
+   ],
    "source": [
     "x= 10\n",
     "y=20\n",
     "\n",
-    "if x==10 and y==20\n",
-    "    print(\" Yes both are e\")"
+    "if x==10 and y==20:\n",
+    "    print(\" Yes both are what you want\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0187ebc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
